--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coti Informática - Projeto Lógica</title>
+    <title>Projeto IMC</title>
 
     <!-- Ligação entre HTML e CSS -->
     <link rel="stylesheet" href="style.css">
